--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -23,14 +24,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@uploadthing/react": "^7.1.0",
+    "change-case": "^5.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
-    "nylas": "^7.6.1",
+    "nylas": "^7.7.0",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.1",
     "react-dom": "^18.3.1",
